# ema-timber

./: .gitignore  README.md
src/python/: build.bat  install.bat  pyproject.toml  requirements.txt  setup.cfg
src/python/ema_timber/: calibrate.py  calibrate2.py  camera.calib  perspective_matrix_01.py  sitk_test_01.py  test_convert.py
src/python/ema_timber/RBGMesh/: knot_jtg.py
src/python/ema_timber/RBGMesh/example/: gh_brep_to_json.gh  model1.3dm
src/python/ema_timber/RBGMesh/src/: brep_jtg.py  gh_brep_to_json.py  gh_knot_to_json.py  json_to_gmsh.py  mesh_gen.py
src/python/ema_timber/communicate/: Broadcast.py  Client.py  Instructor.py  Lines.py  Package.py  Processor.py  Server.py  Yellowpages.py  __init__.py  c_sProt.py  i_sProt.py
src/python/ema_timber/communicate/core/: Broadcast.py  Client.py  Instructor.py  Package.py  Processor.py  Server.py  Telephone.py  Yellowpages.py  __init__.py
src/python/ema_timber/communicate/protocol/: __init__.py
src/python/ema_timber/communicate/protocol/Broadcast/: Broadcast.py  __init__.py  broadcast.py
src/python/ema_timber/drivers/: camera_robot.py
src/python/ema_timber/geometry/: classes.py  convert.py  export.py  generate.py  mesh.py  scan_to_obj.py  scan_to_speckle.py  util.py
src/python/ema_timber/process/: numtoimage.py
src/python/ema_timber/process/knotscrapper/: knotscrap.py  numtoimage.py  prepFile.py
src/python/ema_timber/processs/: numtoimage.py
src/python/ema_timber/simulate/: fibre.py
src/python/ema_timber/structure/: Structure.py
src/python/examples/: exAgent.py  exInst.py  exServer.py
(+109 files in other folders)
