[metadata]
name = ema-timber
version = attr: ema_timber.VERSION
author = Ee Pin Choo, Tom Svilans
author_email = ceep@kglakademi.dk
url = https://github.com/cita-cph/ema-timber
description = Toolkit for the EMA Timber Track.
long_description = file: README.md, LICENSE.md
license = MIT License
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows

[options]
install_requires = 
    numpy>=1.20

include_package_data = True

[options.package_data]
* = 
	*.dll
	*.pyd
	*.py

[options.exclude_package_data]
* =
    *.pdb
    *.lib
    *.exp
